2005-12-25  Ales Hakl  <ales at hakl dot net>

	* dfsch/hash.h: Documentation update

	* src/promise.c: Promises

2005-12-20  Ales Hakl  <ales at hakl dot net>

	* src/object.h: Moved dfsch_object_t definition into separate
	reusable file 

2005-12-19  Ales Hakl  <ales at hakl dot net>

	* configure.ac: Bumped version number to 0.2.0-pre1

2005-12-18  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_call_ec): Escape continuations
	(native_raise, native_error, native_abort ...): Exception wrappers 

2005-12-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Removed checks for exception datatype

	* src/repl.c: Adapted for new exceptions.

	* src/dfsch.c (dfsch_raise): Escape continuations based exceptions
	(dfsch_try): Removed debug hooks

	* src/native.c (native_string_append): string-append for arbitrary
	number of arguments

	* src/dfsch.c (eval_proc_impl): Tail recursion support

2005-12-05  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_eval_proc): eval-proc is avaiable to scheme code
	(native_modulo) modulo (%) operator

2005-11-29  Ales Hakl  <ales at hakl dot net>

	* src/repl.c: Support for logging of executed forms

2005-11-20  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: Extended test suite 

	* tests/scm-test.sh, Makefile.am: integrated test suite into build
	process  

	* src/native.c (native_vector_length): Fixed bug concerning type
	identification 

	* src/repl.c (main): argv variable

	* src/native.c (native_macro_cond): Support for alternate form
	with "=>"

	* src/dfsch.c (dfsch_assoc): assoc works correctly

	* src/native.c: assoc and listref native functions 

2005-11-19  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): Use dfsch_exception_write() consistently

	* src/dfsch.c (dfsch_eval_proc): Propagate exceptions correctly

	* src/stream.c: Cleaned up vector (and other special values) handling

	* src/native.c: Non-comutative number operators behaves correctly
